# sphinx-autorun

./: .travis.yml  AUTHORS  README.md  README.rst  pyproject.toml
sphinx_autorun/: NOTES.md  __init__.py
test/source/: conf.py  index.rst
